src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  
  
  
}

body, html { 
  font-family: 'Audiowide', cursive;
  line-height: 1.4;
  background-color: #282c34;
  height: 100%;
  /* overflow-x: hidden;
  overflow-y: scroll; */
}

#root { 
  border: 3px solid #c04df9;
  /* overflow-x: hidden; */
  overflow-y: scroll;
}

a, li, ul {
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

.shift-nav { 
  text-align: center;
  background-color: #c04df9;
  margin-left: 65vw;
  /* border-radius: 50%; */
  border-radius: 5px 10px 15px 20px;
}

a.my-nav-item{
  color: #f3ea5f !important;
}

a.my-nav-item:hover {
  color: #2bd2fce0  !important;
}

.entrance-text { 
  font-family: 'Audiowide', cursive;
  /* font-size: 65px; */
  font-size: calc(24px + (65 - 24) * ((100vw - 300px) / (1600 - 300)));
  color: #ff48c4;
}

.dropdown-text-prompt {
  color: #2bd1fc !important;
}

.hero-section-centered { 
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.projects-card { 
 background-color: #282c34bb;
 color: #ff48c4;
}

.resume-photo-style { 
  box-shadow: 0 8px 6px -6px black;
}

.projects-card-shadow { 
  box-shadow: 5px 10px rgba(0, 0, 0, 0.671);
}

.title-centered { 
  text-align: center;
}

span.section-title { 
  position: relative;
}

span.section-title:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #FFF;
  visibility: hidden;
  transform: scaleX(0);
  transition: all 0.3s ease-in-out;
}

span.section-title:hover:before {
  visibility: visible;
  transform: scaleX(1);
}

.about-text {
  color: #ff48c4;
}

.about-text-1 {
  color: #2bd1fc !important
}
.sub-header { 
  color: white;
}

.center-component {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 100%;
  /* width: 100vw; */
}

.expanded { 
  transform: rotate(0);
  margin-left: auto;
  transition: transform 3s;
}

/* *********  FLOAIING PROGRAM LANGS  ********* */

/* nest all */
.float-container { 
  position: absolute;
  width: 100%;
  height: 60vh;
  overflow: hidden;
  border: solid;
}

/* nest all */
.all-objects { 
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.all-objects div {
  position: absolute;
}

/* distances from left */

.dist-1 {
  left: 0%;
}

.dist-2 { 
  left: 6%;
}

.dist-3{ 
  left: 12%;
}

.dist-4 { 
  left: 18%;
}

.dist-5 { 
  left: 24%;
}

.dist-6 { 
  left: 30%;
}

.dist-7 { 
  left: 36%;
}

.dist-8 { 
  left: 42%;
}

.dist-9 { 
  left: 48%;
}

.dist-10 { 
  left: 54%;
}

.dist-11 { 
  left: 60%;
}

.dist-12 { 
  left: 66%;
}

.dist-13 { 
  left: 72%;
}

.dist-14 { 
  left: 80%;
}


.dist-1 img{ 
  margin-top: 60vh;
}

.dist-2 img{
  margin-top: 60vh;
}

.dist-3 img { 
  margin-top: 60vh;
}

.dist-4 img{
  margin-top: 60vh;
}

.dist-5 img {
  margin-top: 60vh;
}

.dist-6 img{
  margin-top: 60vh;
}

.dist-7 img {
  margin-top: 60vh;
}

.dist-8 img{
  margin-top: 60vh;
}

.dist-9 img {
  margin-top: 60vh;
}

.dist-10 img {
  margin-top: 60vh;
}

.dist-11 img {
  margin-top: 60vh;
}

.dist-12 img {
  margin-top: 60vh;
}

.dist-13 img {
  margin-top: 60vh;
}

.dist-14 img {
  margin-top: 60vh;
}

/* speeds/direction for the float animation */
.speed-one {
  animation: float_lang 18s linear infinite forwards;
}

.speed-two {
  animation: float_lang 23s linear infinite forwards;
}

.speed-three {
  animation: float_lang 28s linear infinite forwards;
}

.speed-four {
  animation: float_lang 33s linear infinite forwards;
}

.speed-one img {
  width: 150px;
  float: right;
}

.speed-two img {
  width: 150px;
  float: right;
}

.speed-three img {
  width: 150px;
  float: right;
}

.speed-four img {
  width: 150px;
  float: right;
}

@media only screen and (max-width: 600px) {
  .speed-one img {
    width: 50px;
    float: right;
  }
  
  .speed-two img {
    width: 50px;
    float: right;
  }
  
  .speed-three img {
    width: 50px;
    float: right;
  }
  
  .speed-four img {
    width: 50px;
    float: right;
  }
}

/* the key frame work horse for animation */
@keyframes float_lang {
  0%{transform:translateY(10vh)}
  to{transform:translateY(-120vh)}
}

/* FOR FRONT-END */
@keyframes float_lang2 {
  0%{transform:translateY(-180vh)}
  to{transform:translateY(50vh)}
}

/* FOR FRAMEWORKS */
@keyframes float_lang3 {
  0%{transform:translateY(-93vh)}
  to{transform:translateY(50vh)}
}

/* ************** END FLOATING ICONS ************** */

.expandOpen { 
  transform: rotate(180deg);
}

.my-card { 
  font-family: 'Audiowide', cursive !important;
  background-color: #333436 !important;
  color: #ff48c4 !important;
}

.my-hr { 
  border-top: 1px solid #2bd1fc;
  width: 33%;
  margin-left: auto;
  margin-right: auto;
}

.sub-header {
  font-size: 30px;
}

.card-detail-hdr { 
  font-family: 'Audiowide', cursive !important;
  color: #2bd1fc;
}

.expand-icon { 
  color: #2bd1fc !important;
}
/*VV FADE TRANSISTION VV*/

.route-section {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  overflow: hidden;
}

.center-wrapper {
  position: absolute;
  height: 65vh;
  width: 100%;
  /* padding-top: 20%; */
  top: 20%;
  left: 0;
  overflow: scroll;
  /* padding-top: 20%; */
}

.fade-appear,
.fade-enter { 
  opacity: 0;
  z-index: 1;
}

.fade-appear-active,
.fade-enter.fade-enter-active { 
  opacity: 1;
  transition: opacity 300ms linear 150ms;
}

.fade-exit { 
  opacity: 1;
}

.fade-exit.fade-exit-active { 
  opacity: 0;
  transition: opacity 150ms linear;
}

/*^^ end fade dependent CSS ^^*/



/*V SPINNING WILDCARD V*/

.wildcard { 
  color: #2bd1fc;
  display: inline-block;
  font-size: 3rem;
  height: 2.5rem;
}

@media only screen and (max-width: 600px) {
  .wildcard {
    font-size: 1.6rem;
    height: 1.1rem;
  }
}

@keyframes rotate {
  from {transform:rotate(0deg); }
  to {transform:rotate(360deg); }
}

.wildcard {
  transform-origin: center center;
  animation-name: rotate;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  }

/*^ end wildcard related CSS ^*/

.center-entrance  {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-wrapper { 
  display: flex;
}

.my-drop-down { 
  font-family: 'Audiowide', cursive;
  font-size: 35px;
  font-size: calc(14px + (35 - 14) * ((100vw - 300px) / (1600 - 300)));
  border-bottom: 1px solid #2bd1fc !important;
  background-color: transparent;
  border-color: transparent;
  padding: 1.275rem 7.00rem;
}

.my-drop-down:hover { 
  
  color: #ff48c4;
  background-color: #c04df991;
  border-color: transparent;
}

.my-dropdown-menu { 
  background-color: #c04df991;
}

.my-dropdown-item { 
  font-family: 'Audiowide', cursive;
  padding: 10px 100px;
  font-size: 25px;
  color: #2bd1fc;
}

.my-dropdown-item:hover { 
  color: rgb(7, 122, 184);
  background-color: #ff48c4;
}

.my-button {
  color: #ff48c4;
  background-color: transparent;
  border: solid;
  border-radius: 25px;
  border-color: #2bd1fc;
  transition: opacity 0.5s;
  opacity: 1;
}

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.custom-toggler.navbar-toggler {
  border-color: #ff48c4;
} 

.my-button:hover { 
  background-color: #ff48c4;
  border-color: #2bd1fc;
}
.my-button.hide {
  opacity: 0;
  pointer-events:none;
}

.my-menu-button { 
  color: #ff48c4;
  background-color: transparent;
  border: solid;
  border-radius: 10px;
  border-color: #2bd1fc;
}

.my-menu-item { 
  font-family: 'Audiowide', cursive;
  color: #c04df9 !important;
  text-decoration: underline;
  text-decoration-color: #2bd1fc !important;
  text-decoration: none !important;
}

.my-menu-item:hover {
  background-color: #f3ea5f;
  text-decoration: underline !important;
  text-decoration-color: #2bd1fc !important;
}

.main-footer { 
  color: #ff48c4;
  background-color: transparent;
  padding-top: .5em;
  position: relative;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  text-align: center;
  margin-top: -45px;
}

.footer-heart { 
  color: #c04df9;
}

.page-container { 
  position: relative;
  min-height: 100vh;
}

.content-wrap { 
  padding-bottom: 2.5rem;
}

